objects/Account.object
<CustomObject>
    <fields>
        <fullName>Date_Of_Join__c</fullName>
        <label>Date Of Join</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Support_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales users use this field to indicate to Support which customers have support plans.</description>
        <inlineHelpText>Does this customer have a current support plan? Check this box when you sell a support plan to this customer.</inlineHelpText>
        <label>Has Support Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewAccountExternalId__c</fullName>
        <label>NewAccountExternalId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>Customer’s zone within the selected region—for sales operations use only.</description>
        <inlineHelpText>Customer’s zone within the selected region—for sales operations use only.</inlineHelpText>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East Asia</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>UK + Ireland</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Midwest US</fullName>
                </value>
                <value>
                    <fullName>Northeast US</fullName>
                </value>
                <value>
                    <fullName>Southeast US</fullName>
                </value>
                <value>
                    <fullName>Southwest US</fullName>
                </value>
                <value>
                    <fullName>West US</fullName>
                </value>
                <value>
                    <fullName>Northern Canada</fullName>
                </value>
                <value>
                    <fullName>Mountains and the West</fullName>
                </value>
                <value>
                    <fullName>The Prairies</fullName>
                </value>
                <value>
                    <fullName>Central Canada</fullName>
                </value>
                <value>
                    <fullName>East Coast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Customer_Account</fullName>
        <active>true</active>
        <description>For customers and prospects</description>
        <label>Customer Account</label>
    </recordTypes>
</CustomObject>